# terminalpoint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build_publish.yaml
examples/: presentation_01.tpt.md
src/terminalpoint/: __init__.py  __main__.py  app.py
