[metadata]
description = TerminalPoint let's you do your presentations in the Terminal
name = terminalpoint
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/ap--/terminalpoint
platforms=any
authors = Andreas Poehlmann
maintainer_email = andreas@poehlmann.io
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    textual >= 0.53.0
    typer >= 0.9.0
    typing-extensions; python_version < "3.9"

[options.packages.find]
where=src

[options.extras_require]
dev =
    build
    twine
    wheel

[flake8]
ignore=
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Line break occurred before a binary operator
    W503
    # non-indexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
    P1
max_line_length = 88
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
min_python_version = 3.8

[options.entry_points]
console_scripts =
    terminalpoint = terminalpoint.__main__:app
